--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -4,12 +4,14 @@
     <title>Web page #1</title>
   </head>
   <body>
+
     <h1>My first web page</h1>
     <h2>Written with the guidance of Epicodus</h2>
 
     <p>This is my first webpage!</p>
     <p>Isn't it nice?</p>
-
+    <p>Here is a link to my <a href="favorite-things.html">Favorite Things</a>.</p>
+    
     <p>Here are some things I'm going to learn about coding:</p>
     <ol>
       <li>HTML</li>
