added family images and favorite websites

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -11,14 +11,16 @@
     <p>Here are some of my favorite people!</p>
     <ul>
       <li>My Brother</li>
+      <img src="../brother.jpg" alt="My Brother.">
       <li>My mom and dad:
         <ul>
-          <li>Steve</li>
-          <li>Carol</li>
+          <li><strong>Steve</strong><img src="../Dad.jpg" alt="This is Dad."></li>
+          <li><strong>Carol</strong><img src="../mom.jpg" alt="This is Mom."></li>
+
         </ul>
       </li>
-      <li>My friend Jessica</li>
-      <li>My friend Candy</li>
+      <li><strong>My friend Jessica</strong><img src="../jessica.jpg" alt="My friend Jessica."></li>
+      <li><strong>My friend Candy</strong><img src="../candy.jpg" alt="My friend Candy."></li>
     </ul>
 
     <h3>Flavors of ice cream</h3>
@@ -28,6 +30,11 @@
       <li>Malted milk chocolate</li>
       <li>Black licorice</li>
     </ol>
+    <h3>Favorite websites</h3>
+    <ul>
+      <li><a href="https://www.reddit.com/"> Reddit</a></li>
+      <li><a href="https://www.youtube.com/"> YouTube</a></li>
+      <li><a href="https://www.netflix.com/"> Netflix</a></li>
 
     <p>Thanks for reading about me!</p>
   </body>
