--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -11,7 +11,8 @@
     <p>This is my first webpage!</p>
     <p>Isn't it nice?</p>
     <p>Here is a link to my <a href="favorite-things.html">Favorite Things</a>.</p>
-    
+    <img src="../cool-cat.jpg" alt="A photo of a cat.">
+
     <p>Here are some things I'm going to learn about coding:</p>
     <ol>
       <li>HTML</li>
