added css directories for both pages

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Favorite things</title>
+    <link href="css/favorite-things.css" rel="stylesheet" type="text/css"></link>
   </head>
   <body>
     <h1>My favorite things</h1>
@@ -11,30 +12,37 @@
     <p>Here are some of my favorite people!</p>
     <ul>
       <li>My Brother</li>
-      <img src="../brother.jpg" alt="My Brother.">
+      <img id="brother" src="../brother.jpg" alt="My Brother.">
       <li>My mom and dad:
         <ul>
-          <li><strong>Steve</strong><img src="../Dad.jpg" alt="This is Dad."></li>
-          <li><strong>Carol</strong><img src="../mom.jpg" alt="This is Mom."></li>
+          <li><strong>Steve</strong><img id="dad" src="../Dad.jpg" alt="This is Dad."></li>
+          <li><strong>Carol</strong><img id="mom" src="../mom.jpg" alt="This is Mom."></li>
 
         </ul>
       </li>
-      <li><strong>My friend Jessica</strong><img src="../jessica.jpg" alt="My friend Jessica."></li>
-      <li><strong>My friend Candy</strong><img src="../candy.jpg" alt="My friend Candy."></li>
+      <li><strong>My friend Jessica</strong><img id="jessica" src="../jessica.jpg" alt="My friend Jessica."></li>
+      <li><strong>My friend Candy</strong><img id="candy" src="../candy.jpg" alt="My friend Candy."></li>
     </ul>
 
     <h3>Flavors of ice cream</h3>
     <p>These are my three favorites, in order:</p>
     <ol>
-      <li>Pistachio</li>
-      <li>Malted milk chocolate</li>
-      <li>Black licorice</li>
+      <li>Pistachio
+        <img id="pistachio" src="../pistachio.jpg" alt="pistachio ice cream.">
+      </li>
+      <li>Malted milk chocolate
+        <img id="maltMilkChocolate" src="../malt milk chocolate.jpg" alt="malted milk chocolate ice cream">
+      </li>
+      <li>Black licorice
+        <img id="blackLicorice" src="../black licorice.jpg" alt="black licorice ice cream.">
+      </li>
     </ol>
     <h3>Favorite websites</h3>
     <ul>
       <li><a href="https://www.reddit.com/"> Reddit</a></li>
       <li><a href="https://www.youtube.com/"> YouTube</a></li>
       <li><a href="https://www.netflix.com/"> Netflix</a></li>
+    </ul>
 
     <p>Thanks for reading about me!</p>
   </body>
