--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head> 
     <title>Web page #1</title>
+    <link href="css/my-first-webpage.css" rel="stylesheet" type="text/css"></link>
   </head>
   <body>
+    <img src="../cool-cat.jpg" alt="A photo of a cat.">
 
     <h1>My first web page</h1>
     <h2>Written with the guidance of Epicodus</h2>
@@ -11,7 +13,6 @@
     <p>This is my first webpage!</p>
     <p>Isn't it nice?</p>
     <p>Here is a link to my <a href="favorite-things.html">Favorite Things</a>.</p>
-    <img src="../cool-cat.jpg" alt="A photo of a cat.">
 
     <p>Here are some things I'm going to learn about coding:</p>
     <ol>
